--- a/hunter.html
+++ b/hunter.html
@@ -70,37 +70,101 @@
 </div>
 <div class="game-board">
     <div class="row" style="padding-left: 150px;" >
-        <div class="col-md-2"><img id = "0"  src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "1"  src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "2"  src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "3"  src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "4"  src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "5"  src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "0" onclick="check(0)"  src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "1" onclick="check(1)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "2" onclick="check(2)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "3" onclick="check(3)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "4" onclick="check(4)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "5" onclick="check(5)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
     </div>
     <div class="row" style="padding-left: 150px;" >
-        <div class="col-md-2"><img id = "6" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "7" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "8" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "9" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "10" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "11" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "6" onclick="check(6)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "7" onclick="check(7)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "8" onclick="check(8)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "9" onclick="check(9)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "10" onclick="check(10)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "11" onclick="check(11)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
     </div>
     <div class="row" style="padding-left: 150px;" >
-        <div class="col-md-2"><img id = "12" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "13" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "14" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "15" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "16" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "17" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "12" onclick="check(12)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "13" onclick="check(13)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "14" onclick="check(14)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "15" onclick="check(15)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "16" onclick="check(16)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "17" onclick="check(17)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
     </div>
     <div class="row" style="padding-left: 150px;" >
-        <div class="col-md-2"><img id = "18" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "19" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "20" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "21" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "22" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
-        <div class="col-md-2"><img id = "23" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "18" onclick="check(18)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "19" onclick="check(19)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "20" onclick="check(20)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "21" onclick="check(21)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "22" onclick="check(22)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
+        <div class="col-md-2"><img id = "23" onclick="check(23)" src="bush.png" alt="Bush" style="width: 100px;height:100px;"></div>
     </div>
 </div>
+<script>
+const ids = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "bushes", "penalty"];
+let checkCount = 0;
+let penalty = 0;
+let lastCheck = 0;
+let mouseLocation = 13;
+let catLocation = 21;
+let gameOver = false;
+
+function check(position) {
+  if (gameOver) {
+    return;
+  }
+
+  const imgId = ids[position];
+  const imgElement = document.getElementById(imgId);
+
+  if (position === mouseLocation) {
+    imgElement.src = "mouse.jpeg";
+    gameOver = true;
+    penalty -= 3;
+  } else if (position === catLocation) {
+    imgElement.src = "cat.png";
+    gameOver = true;
+    penalty += 4;
+  } else {
+    imgElement.src = "grass.png";
+  }
+
+  checkCount++;
+  penalty++;
+  document.getElementById("bushes").innerHTML = checkCount;
+
+  if (gameOver) {
+    document.getElementById("penalty").innerHTML = penalty;
+  }
+
+  lastCheck = position;
+}
+
+function help() {
+  const catRow = Math.floor(catLocation / 6);
+  const catCol = catLocation % 6;
+
+  const lastRow = Math.floor(lastCheck / 6);
+  const lastCol = lastCheck % 6;
+
+  if (Math.abs(catRow - lastRow) <= 1 && Math.abs(catCol - lastCol) <= 1) {
+    return "meow";
+  }
+
+  const mouseRow = Math.floor(mouseLocation / 6);
+  const mouseCol = mouseLocation % 6;
+
+  if (Math.abs(mouseRow - lastRow) <= 1 && Math.abs(mouseCol - lastCol) <= 1) {
+    return "squeak";
+  }
+
+  return "sorry, no help available";
+const helpButton = document.getElementById("help-button");
+helpButton.onclick = help;
+}
+
+</script>
 </body>
 </html>
